--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ header nav div .menu-bar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 552px;
+  height: 562px;
   width: 327px;
   background: #fff;
   border: 1px solid #dfe1e6;
@@ -355,6 +355,7 @@ header nav div .menu-bar {
   order: 2;
   flex-grow: 0;
   padding-top: 12px;
+  list-style: none;
 }
 
 .li11 {
@@ -420,8 +421,7 @@ header nav div .menu-bar {
 
 .btn {
   padding: 12px;
-  margin-top: 12px;
-  margin-bottom: 12px;
+  margin-bottom: 24px;
   border: 1px solid #6070ff;
   border-radius: 8px;
   font-weight: 500;
@@ -436,7 +436,7 @@ header nav div .menu-bar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 596px;
+  height: 612px;
   width: 327px;
   background: #fff;
   border: 1px solid #dfe1e6;
@@ -504,7 +504,7 @@ header nav div .menu-bar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 596px;
+  height: 612px;
   width: 327px;
   background: #fff;
   border: 1px solid #dfe1e6;
@@ -679,4 +679,19 @@ header nav div .menu-bar {
   margin-top: 21px;
   margin-bottom: 21.72px;
   margin-right: 12px;
+}
+
+.btn:hover {
+  background: #6070ff;
+  color: #fff;
+}
+
+.btn:active {
+  background: #2230d2;
+  color: #fff;
+}
+
+.btn:disabled {
+  background: #e5e5e5;
+  color: #5e6c84;
 }
