modify html and css files to match the figma desktop design

--- a/style.css
+++ b/style.css
@@ -832,3 +832,597 @@ header nav div .menu-bar {
   height: 0;
   width: 0;
 }
+
+@media screen and (min-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  header {
+    width: 1440px;
+    height: 72px;
+    background: #fff;
+    overflow: hidden;
+  }
+
+  .logo {
+    padding: 25px 620px 0 155px;
+  }
+
+  .menu-bar {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
+  .nav-links {
+    padding-top: 15px;
+    padding-right: 142px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    list-style: none;
+  }
+
+  .port1 {
+    padding: 10px 12px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    color: #344563;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    text-decoration: none;
+  }
+
+  .ab1 {
+    padding: 10px 12px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    color: #344563;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    text-decoration: none;
+  }
+
+  .cont1 {
+    padding: 10px 12px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 20px;
+    color: #344563;
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    text-decoration: none;
+  }
+
+  .introduction {
+    padding: 46px 8px 76.54px 34.6px;
+    height: 721.46;
+    width: 1397.4px;
+    background-image: url(.images/Header\ bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+  }
+
+  .introduction .title {
+    margin-left: 260px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 60px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.37px;
+    color: #091e42;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    animation-duration: 4s;
+    animation-name: fadeInOut;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    white-space: nowrap;
+    width: 920px;
+    height: 122px;
+  }
+
+  @keyframes fadeInOut {
+    0% {
+      color: cyan;
+    }
+
+    50% {
+      color: red;
+    }
+
+    75% {
+      color: blueviolet;
+    }
+
+    100% {
+      color: dodgerblue;
+    }
+  }
+
+  .introduction .description {
+    margin: 12px 260px 12px 260px;
+    width: 920px;
+    height: 98px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: #344563;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    white-space: normal;
+  }
+
+  .introduction .social {
+    margin-top: 12px;
+    margin-left: 260px;
+    width: 117px;
+    height: 24px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #7f8cff;
+    flex: none;
+    order: 3;
+    flex-grow: 0;
+    overflow: hidden;
+  }
+
+  .introduction .social-links {
+    display: flex;
+    flex-direction: row;
+    margin-top: 14px;
+    margin-left: 260px;
+    flex: none;
+    order: 4;
+  }
+
+  .section1 {
+    width: 1156px;
+    height: 496px;
+    flex-grow: 0;
+    margin: 142px;
+    background: #fff;
+    border: 2px solid #a7aeff;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .right-block .img-section1 {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
+  .right-block .img-sec1 {
+    display: block;
+    height: 448px;
+    width: 544px;
+  }
+
+  .right-block {
+    padding: 24px 24px 24px 22px;
+    height: 448px;
+    width: 544px;
+    border-radius: 8px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    display: block;
+  }
+
+  .left-block {
+    padding-top: 24px;
+    padding-right: 22px;
+    padding-bottom: 7px;
+    gap: 24px;
+    left: 590px;
+    width: 544px;
+    height: 465px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .section-title {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
+  .experience {
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-top: 0;
+    padding-right: 24px;
+    margin-bottom: 0;
+    padding-left: 24px;
+    height: 98px;
+    width: 496px;
+  }
+
+  .section-titlef {
+    display: inline;
+    padding: 0;
+    margin: 0;
+    width: 496px;
+    height: 46px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    color: #091e42;
+  }
+
+  .section-title1 {
+    display: inline;
+    padding: 0;
+    margin: 0;
+    width: 496px;
+    height: 46px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    color: #091e42;
+    white-space: nowrap;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0;
+    width: 320px;
+    height: 40px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 0;
+    padding-top: 12px;
+  }
+
+  .list1 {
+    padding-left: 0;
+    padding-right: 8px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #344563;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+
+  .list2 {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 0;
+    padding-right: 8px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #344563;
+  }
+
+  .list3 {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 0;
+    padding-right: 8px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    color: #344563;
+  }
+
+  .section-description0 {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
+  .section-description1 {
+    display: block;
+    padding-left: 24px;
+    padding-right: 24px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #344563;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    width: 496px;
+    height: 70px;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+
+  .tags {
+    padding-left: 24px;
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    height: 24px;
+    width: 316px;
+    padding-top: 0;
+    margin-top: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+
+  .li11 {
+    background: #ebebff;
+    border-radius: 8px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    padding: 4px 12px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #6070ff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .li222 {
+    background: #ebebff;
+    border-radius: 8px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    padding: 4px 12px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #6070ff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .li22 {
+    background: #ebebff;
+    border-radius: 8px;
+    flex: none;
+    order: 2;
+    flex-grow: 0;
+    padding: 4px 12px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #6070ff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+  }
+
+  .li33 {
+    background: #ebebff;
+    border-radius: 8px;
+    flex: none;
+    order: 3;
+    flex-grow: 0;
+    padding: 4px 12px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    color: #6070ff;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .action {
+    width: 496px;
+    height: 153px;
+    flex: none;
+    order: 3;
+    flex-grow: 0;
+    padding: 0 24px 0 24px;
+    margin-top: 0;
+  }
+
+  .btn {
+    margin: 16px 372px 89px 0;
+    padding: 12px;
+    width: 124px;
+    height: 48px;
+    background: #4053fc;
+    border-radius: 8px;
+    color: #fff;
+    white-space: nowrap;
+  }
+
+  .section2 {
+    width: 1156px;
+    height: 496px;
+    background: #fff;
+    border: 1px solid #dfe1e6;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    margin: 142px;
+  }
+
+  .img-sec2 {
+    display: block;
+    height: 448px;
+    width: 544px;
+  }
+
+  .image-section2 {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
+  .experience1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    width: 496px;
+    height: 98px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    padding-top: 24px;
+    padding-left: 24px;
+  }
+
+  .section3 {
+    width: 1156px;
+    height: 496px;
+    margin: 142px;
+    background: #fff;
+    border: 1px solid #dfe1e6;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .image-section3 {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
+  .img-sec3 {
+    display: block;
+    height: 448px;
+    width: 544px;
+  }
+
+  .image-section4 {
+    display: none;
+    height: 0;
+    width: 0;
+  }
+
+  .img-sec4 {
+    display: block;
+    height: 448px;
+    width: 544px;
+  }
+
+  .section4 {
+    width: 1156px;
+    height: 496px;
+    margin: 142px;
+    background: #fff;
+    border: 1px solid #dfe1e6;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .section5 {
+    width: 1440px;
+    height: 668px;
+    margin-top: 142px;
+    margin-left: 0;
+    margin-right: 0;
+    background: #fff;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    border-top-right-radius: 140px;
+  }
+
+  .top {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 447px;
+    height: 392px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    padding-top: 142px;
+    padding-left: 142px;
+    padding-bottom: 134px;
+    padding-right: 25px;
+  }
+
+  .skills-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    height: 360px;
+    width: 684px;
+    padding-top: 142px;
+    padding-right: 142px;
+    padding-bottom: 166px;
+  }
+
+  .contactform {
+    width: 1440px;
+    height: 846px;
+    background: #6070ff;
+    background-image: url(.images/contact\ form\ background\ shapes@2x.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 79.09px 74px 48.21px 75.34px;
+  }
+
+  .works {
+    height: 800px;
+    width: 375px;
+  }
+}
