--- a/style.css
+++ b/style.css
@@ -1379,8 +1379,8 @@ header nav div .menu-bar {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 447px;
-    height: 392px;
+    width: 25%;
+    height: auto;
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -1397,13 +1397,48 @@ header nav div .menu-bar {
     flex: none;
     order: 1;
     flex-grow: 0;
-    height: 360px;
-    width: 684px;
+    height: auto;
+    width: 75%;
     padding-top: 142px;
     padding-right: 142px;
     padding-bottom: 166px;
   }
 
+  .languages {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container {
+    width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .language-list {
+    width: 70%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .js1 {
+    flex: none;
+    order: 0;
+  }
+
+  .js2 {
+    flex: none;
+    order: 1;
+  }
+
+  .js3 {
+    flex: none;
+    order: 2;
+  }
   .contactform {
     width: 1440px;
     height: 846px;
