--- a/style.css
+++ b/style.css
@@ -808,14 +808,7 @@ header nav div .menu-bar {
   margin-top: 22px;
 }
 
-.contactform .contact-form .submit-btn:hover {
-  background-color: #fcc;
-  width: 200px;
-  height: 200px;
-  transform: rotate(180deg);
-}
-
-.contactform .indicator {
+/*.contactform .indicator {
   margin-top: 0;
   width: 134px;
   height: 5px;
@@ -823,7 +816,7 @@ header nav div .menu-bar {
   bottom: 8px;
   background: #0d151e;
   border-radius: 10px;
-}
+}*/
 
 .img-sec2 {
   display: none;
