--- a/style.css
+++ b/style.css
@@ -856,6 +856,11 @@ header nav div .menu-bar {
     height: 0;
   }
 
+.img-section2 {
+  display: none;
+  height: 0;
+}
+
   header nav .nav-links {
     padding-top: 15px;
     padding-right: 50px;
