--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ header nav div .menu-bar {
 
 .section4 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-content: center;
   height: 612px;
   width: 327px;
