--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ header nav div .menu-bar {
   font-size: 24px;
   margin-right: 35px;
   cursor: pointer;
+  position: absolute;
+}
+
+.menu-icons {
   position: relative;
 }
 
