--- a/style.css
+++ b/style.css
@@ -32,30 +32,35 @@ nav {
   right: 0;
   top: 0;
   bottom: 0;
-  background: #6070ff;
-  mix-blend-mode: multiply;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  justify-content: center;
-  position: absolute;
 }
 
-.nav-links1 ul li {
+.menu-items .nav-links1 li {
   text-decoration: none;
+  list-style: none;
+  margin: 20px;
 }
 
-.nav-links1 ul li a {
+.menu-items .nav-links1 li .h-menu {
   text-decoration: none;
   font-weight: 600;
   font-size: 32px;
   line-height: 44px;
   color: #fff;
+  text-align: center;
 }
 
 .nav-links1.open-menu {
   width: 375px;
-  height: 665px;
+  height: 668px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #6070ff;
+  mix-blend-mode: multiply;
+  overflow: hidden;
+  top: 0;
+  right: 0;
 }
 
 #btn {
@@ -82,6 +87,7 @@ header nav div .menu-bar {
   margin-right: 35px;
   cursor: pointer;
   position: absolute;
+  display: block;
 }
 
 .menu-icons {
